# wgmesh

./: .gitattributes  .gitignore  .pylintrc  INSTALL.md  LICENSE  MANIFEST.in  README.md  SITESETUP.md  UPDATES  WGMESH-2.md  bootstrap.sh  createhost.py  local.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  site_publish.py  tox.ini  version.py  wgcli.py  wgfrr-default.yaml  wgfrr.py  wgfrr.yaml  wgmesh-default.yaml
Documents/: Asn.md  BGP.md  BUGS.md  Configuration.md  ENCRYPTION.md  FRR_Alignment.md  GOALS.md  Journal.md  Messages.md  RECORDS.md  Route53_Policy.md  bird@.service  crypto.py  dead_templates.py  dependencies_11.txt  dependencies_12.txt  snippet_process_kwargs.py  wgmesh.service  wgmesh_AddressAlignment.md  wgnamespace.service
examples/bird_private.d/: local_static.conf
serf/: deploy_serf.sh  serf_deploy.yml
serf/files/: serf-agent@.service
src/wgmesh/: __init__.py  crypto.py  datalib.py  endpointdata.py  hostlib.py  lib.py  route53.py  sitedata.py  store_dns.py  store_dns_test.py  templates.py  transforms.py  version.py  wgsetup.py  wgsite.py
systemd/: bird@.service  systemd-netns-access@.service  wgmesh@.service
tests/: test_crypto.py  test_dns.py  test_endpoints.py  test_integration.sh  test_priv  test_pub  test_sitedata0.py  test_transforms.py  test_wgsite.py
util/: birdwatch.sh  portproofing.py
wgmesh/: __init__.py  config.py  core.py  crypto.py  deploy.py  endpointdb.py  host.py  hostinit.py  init.py  pub.py  pubhost.py  route53.py  site.py  site_publish.py  templates.py  version.py  wgfrr.py  wgsetup.py  wgsite.py  wgstatic.py
