[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "wgmesh"
description = "Wireguard Mesh Configuration Coordinator"
authors = [
    {name = "Joshua Schmidlkofer", email = "joshua+wgmesh@joshuainnovates.us" },
]
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Linux",
]
dependencies = [
    "typer==0.24.0",
    "click==8.3.1",
    "wheel==0.46.3",
    "attrs==25.4.0",
    "rich==14.3.2",
    "dnspython==2.8.0",
    "ifaddr==0.2.0",
    "loguru==0.7.3",
    "natsort==8.4.0",
    "netaddr==1.3.0",
    "pynacl==1.6.2",
    "route53==1.0.1",
    "ruamel.yaml==0.19.1",
    "six==1.17.0",
    "jinja2==3.1.6",
    "munch==4.0.0",
]
dynamic = ["version", "readme"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["wgmesh"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "wgmesh.version.VERSION"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[project.scripts]
wgsite   = "wgmesh.wgsite:app"
wgsetup  = "wgmesh.wgsetup:app"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

